option optimize_for = LITE_RUNTIME;
import "FighterStatu.proto";
import "ContinueAttackData.proto";
message AttackData
{
 repeated uint32 attackers = 1;
 repeated uint32 beattackers = 2;
 required uint32 skillid = 3;
 repeated FighterStatu newstatus = 4;
 repeated uint32 attackersflag = 5;
 repeated ContinueAttackData continueAttacks = 6;
}
